--- a/QrCoderBlazor/_Imports.razor
+++ b/QrCoderBlazor/_Imports.razor
@@ -4,7 +4,7 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
-@using BlazorApp_empty1
+@using QrCoderBlazor
 
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Web.Virtualization
